[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Sina Ehsanzadeh <s.eh.81088135@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
